# sloked

./: .gitignore  Dockerfile  README.md  meson.build  meson_options.txt
components/bootstrap/: meson.build
components/bootstrap/src/: Graphics.cpp  main.cpp
components/compat/: meson.build
components/compat/src/: Compat.cpp
components/compat/src/compression/: Compat.cpp
components/compat/src/crypto/: Compat.cpp
components/compat/src/namespace/: Compat.cpp
components/compat/src/net/: Compat.cpp
components/compat/src/script/: Compat.cpp
components/compression/zlib/: meson.build
components/compression/zlib/src/: Zlib.cpp
components/crypto/botan/: meson.build
components/crypto/botan/src/: Botan.cpp
components/framework/tests/: main.cpp  meson.build
components/framework/tests/core/: Base64.cpp  Cache.cpp  CharPreset.cpp  Counter.cpp  DataHandle.cpp  DynamicBitset.cpp  Error.cpp  Event.cpp
components/frontend/: demo.lua  main.cpp  meson.build
components/frontend/script/: demo.lua
components/frontend/src/: CorePlugin.cpp  Graphics.cpp  Namespace.cpp  main.cpp
components/platform/posix/: meson.build
components/script/lua/: meson.build
components/script/lua/src/: Common.cpp  Editor.cpp  Logger.cpp  Lua.cpp  Pipe.cpp  Sched.cpp  Server.cpp
components/ui-cairo/: meson.build
components/ui-sdl/: meson.build
src/: .clang-format  PosixAnsiConsole.cpp  main.cpp  meson.build  meson_options.txt
src/cli/: Options.cpp  Parser.cpp
src/components/bootstrap/: meson.build
src/components/bootstrap/src/: Graphics.cpp  Namespace.cpp  main.cpp
src/components/compat/: meson.build
src/components/compat/src/: Compat.cpp
src/components/crypto/openssl/: meson.build
src/components/framework/: meson.build
src/components/framework/tests/: meson.build
src/components/frontend/: meson.build
src/components/frontend-cpp/: meson.build
src/components/frontend-cpp/src/: Application.cpp
src/components/frontend-old/: meson.build
src/components/frontend-old/script/: demo.lua
src/components/frontend-old/src/: Application.cpp
src/components/frontend/script/: demo.lua
src/components/frontend/src/: Application.cpp  CorePlugin.cpp
src/components/headless/: package-lock.json  package.json
src/components/headless/application-lib/: meson.build
src/components/headless/src/: config.json  detached.ts  index.ts  standalone.ts
src/components/int-tests/: package-lock.json  tsconfig.json
src/components/int-tests/headless/: meson.build
src/components/int-tests/src/: application.ts  config.json  index.ts
src/components/lua-connector/: meson.build
src/components/lua-connector/script/: demo.lua
src/components/lua-connector/src/: Application.cpp
src/components/platform/posix/: meson.build
src/components/platform/win32/: meson.build
src/components/sloked-nodejs/: modules.ts  package-lock.json  package.json  tsconfig.json  types.ts
src/components/sloked-nodejs/src/: index.ts  sample.ts
src/components/ui-cairo/: meson.build
src/core/: Base64.cpp  CLI.cpp  CharWidth.cpp  DynamicBitset.cpp  Encoding.cpp  Error.cpp  EventLoop.cpp  Failure.cpp  Locale.cpp  Logger.cpp  NewLine.cpp  Position.cpp  Scope.cpp  Semaphore.cpp  String.cpp  ThreadPool.cpp  URI.cpp
src/core/awaitable/: Poll.cpp  Posix.cpp
src/core/encoding/: Utf32LE.cpp  Utf8.cpp
src/crypto/botan/: meson.build
src/demo/: main.cpp
src/editor/: Configuration.cpp  Document.cpp  DocumentSet.cpp  DocumentUpstream.cpp  EditorCore.cpp  EditorServer.cpp  ScreenServer.cpp  Tabs.cpp
src/editor/doc-mgr/: Document.cpp  DocumentSet.cpp  DocumentUpstream.cpp
src/editor/terminal/: ScreenProvider.cpp
src/filesystem/: File.cpp  FileIO.cpp
src/filesystem/posix/: File.cpp  FileIO.cpp  Reader.cpp  View.cpp  Writer.cpp
src/framework/: meson.build
src/framework/core/: CharWidth.cpp  Failure.cpp  Semaphore.cpp  ThreadPool.cpp
src/framework/core/awaitable/: Poll.cpp
src/framework/editor/: EditorServer.cpp
src/framework/json/: Parser.cpp
src/framework/kgr/: Value.cpp
src/framework/namespace/: Mount.cpp
src/framework/net/: CryptoSocket.cpp
src/framework/security/: Authenticator.cpp
src/framework/services/: DocumentSet.cpp  Service.cpp  TextRender.cpp
src/framework/text/: TextBlockHandle.cpp  TextChunk.cpp
src/json/: AST.cpp  Lexer.cpp  Parser.cpp
src/kgr/: Path.cpp  RestrictedServer.cpp  Serialize.cpp  Value.cpp
src/kgr/local/: Context.cpp  ContextManager.cpp  NamedServer.cpp  Pipe.cpp  RestrictedServer.cpp  Server.cpp
src/kgr/net/: Interface.cpp  MasterServer.cpp  PosixSocket.cpp  SlaveServer.cpp
src/namespace/: Directory.cpp  Filesystem.cpp  Find.cpp  Object.cpp  Path.cpp  Resolve.cpp  View.cpp  Virtual.cpp
src/namespace/posix/: Environment.cpp  Filesystem.cpp
src/net/: CryptoSocket.cpp  Poll.cpp  PosixSocket.cpp  Socket.cpp
src/optional/crypto/: Botan.cpp
src/platform/posix/: meson.build
src/sched/: EventLoop.cpp  Scheduler.cpp  Timer.cpp
src/screen/: CharWidth.cpp  Component.cpp  ComponentTree.cpp  Splitter.cpp
src/screen/posix-term/: PosixTerminal.cpp
src/screen/term-multiplexer/: TerminalBuffer.cpp  TerminalScreenView.cpp  TerminalSplitter.cpp  TerminalTabber.cpp  TerminalWindow.cpp
src/screen/terminal/: CharWidth.cpp  TerminalResize.cpp  TerminalSize.cpp
src/screen/widgets/: TextEditor.cpp
src/script/lua/: Common.cpp  Logger.cpp  meson.build
src/security/: Auth.cpp  Authenticator.cpp  Master.cpp  Restriction.cpp  Slave.cpp
src/services/: Cursor.cpp  DocumentNotify.cpp  DocumentSet.cpp  Namespace.cpp  Screen.cpp  ScreenInput.cpp  ScreenSize.cpp  Search.cpp  Service.cpp  TextEditor.cpp  TextPane.cpp  TextRender.cpp
src/text/: Bookmark.cpp  Cursor.cpp  TextBlock.cpp  TextBlockHandle.cpp  TextChunk.cpp  TextDocument.cpp  TextFrame.cpp  TextRegion.cpp  TextView.cpp  Watcher.cpp
src/text/cursor/: Cursor.cpp  EditingPrimitives.cpp  PlainCursor.cpp  Transaction.cpp  TransactionBatch.cpp  TransactionCursor.cpp  TransactionFactory.cpp  TransactionStreamMultiplexer.cpp
src/text/posix/: TextFile.cpp
src/text/search/: Match.cpp  Replace.cpp
(+1083 files in other folders)
