sloked_src = [
  'core/Base64.cpp',
  'core/CharWidth.cpp',
  'core/CLI.cpp',
  'core/Closeable.cpp',
  'core/DynamicBitset.cpp',
  'core/Encoding.cpp',
  'core/Error.cpp',
  'core/Failure.cpp',
  'core/Locale.cpp',
  'core/Logger.cpp',
  'core/NewLine.cpp',
  'core/Position.cpp',
  'core/Scope.cpp',
  'core/Semaphore.cpp',
  'core/String.cpp',
  'core/ThreadPool.cpp',
  'core/URI.cpp',
  'core/encoding/Utf8.cpp',
  'core/encoding/Utf32LE.cpp',
  'core/awaitable/Poll.cpp',
  'editor/Configuration.cpp',
  'editor/EditorCore.cpp',
  'editor/EditorServer.cpp',
  'editor/ScreenServer.cpp',
  'editor/doc-mgr/Document.cpp',
  'editor/doc-mgr/DocumentSet.cpp',
  'editor/doc-mgr/DocumentUpstream.cpp',
  'editor/terminal/ScreenProvider.cpp',
  'filesystem/FileIO.cpp',
  'json/AST.cpp',
  'json/Lexer.cpp',
  'json/Parser.cpp',
  'kgr/Path.cpp',
  'kgr/RestrictedServer.cpp',
  'kgr/Serialize.cpp',
  'kgr/Value.cpp',
  'kgr/local/Context.cpp',
  'kgr/local/NamedServer.cpp',
  'kgr/local/Pipe.cpp',
  'kgr/local/Server.cpp',
  'kgr/net/Interface.cpp',
  'kgr/net/MasterServer.cpp',
  'kgr/net/SlaveServer.cpp',
  'namespace/Directory.cpp',
  'namespace/Filesystem.cpp',
  'namespace/Find.cpp',
  'namespace/Mount.cpp',
  'namespace/Object.cpp',
  'namespace/Path.cpp',
  'namespace/Resolve.cpp',
  'namespace/View.cpp',
  'namespace/Virtual.cpp',
  'net/CryptoSocket.cpp',
  'net/Socket.cpp',
  'sched/EventLoop.cpp',
  'sched/Scheduler.cpp',
  'screen/Component.cpp',
  'screen/ComponentTree.cpp',
  'screen/Splitter.cpp',
  'screen/terminal/TerminalResize.cpp',
  'screen/terminal/TerminalSize.cpp',
  'screen/terminal/multiplexer/TerminalWindow.cpp',
  'screen/terminal/multiplexer/TerminalBuffer.cpp',
  'screen/terminal/multiplexer/TerminalSplitter.cpp',
  'screen/terminal/multiplexer/TerminalTabber.cpp',
  'screen/terminal/components/ComponentHandle.cpp',
  'screen/terminal/components/MultiplexerComponent.cpp',
  'screen/terminal/components/SplitterComponent.cpp',
  'screen/terminal/components/TabberComponent.cpp',
  'screen/terminal/components/TextPane.cpp',
  'screen/terminal/components/TextPaneComponent.cpp',
  'screen/widgets/TextEditor.cpp',
  'security/Authenticator.cpp',
  'security/Master.cpp',
  'security/Restriction.cpp',
  'security/Slave.cpp',
  'services/ScreenInput.cpp',
  'services/ScreenSize.cpp',
  'services/Cursor.cpp',
  'services/DocumentNotify.cpp',
  'services/DocumentSet.cpp',
  'services/Namespace.cpp',
  'services/Screen.cpp',
  'services/Search.cpp',
  'services/Service.cpp',
  'services/TextPane.cpp',
  'services/TextRender.cpp',
  'text/TextBlock.cpp',
  'text/TextBlockHandle.cpp',
  'text/TextChunk.cpp',
  'text/TextDocument.cpp',
  'text/TextFrame.cpp',
  'text/TextRegion.cpp',
  'text/TextView.cpp',
  'text/cursor/Cursor.cpp',
  'text/cursor/EditingPrimitives.cpp',
  'text/cursor/Transaction.cpp',
  'text/cursor/TransactionBatch.cpp',
  'text/cursor/TransactionCursor.cpp',
  'text/cursor/TransactionFactory.cpp',
  'text/cursor/TransactionStreamMultiplexer.cpp',
  'text/search/Match.cpp',
  'text/search/Replace.cpp',
]

threads = dependency('threads')
sloked_framework_lib = static_library('sloked', sloked_src,
  include_directories : include_directories('../../headers/framework'),
  dependencies : [threads])
sloked_framework = declare_dependency(link_with : sloked_framework_lib,
  include_directories : include_directories('../../headers/framework'))